# CMakeInit

./: .gitignore  CMakeLists.txt  README.md
src/: cmake-init.cpp
templates/default/: CMakeLists.txt  cmake_init_defaults.txt
templates/shared_lib/: CMakeLists.txt  cmake_init_defaults.txt
templates/shared_lib/cmake/: !@project@!Config.cmake
